[project]
name = "CNVkit"
description = "Copy number variation toolkit for high-throughput sequencing."
readme = "README.rst"
#license = "Apache-2.0"
license = {text = "Apache-2.0"}
authors = [
  {name = "Eric Talevich", email = "me+code@etal.mozmail.com"}
]
maintainers = [
  {name = "Eric Talevich", email = "me+code@etal.mozmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Visualization"
]
requires-python = ">=3.9"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/etal/cnvkit"
documentation = "https://readthedocs.org"
repository = "https://github.com/etal/cnvkit"
changelog = "https://github.com/etal/cnvkit/releases"

[project.scripts]
"cnvkit.py" = "cnvlib.cnvkit:main"
"cnv_annotate.py" = "cnvlib.cli.cnv_annotate:main"
"cnv_expression_correlate.py" = "cnvlib.cli.cnv_expression_correlate:main"
"cnv_updater.py" = "cnvlib.cli.cnv_updater:main"
"genome_instability_index.py" = "cnvlib.cli.genome_instability_index:main"
"guess_baits.py" = "cnvlib.cli.guess_baits:main"
"reference2targets.py" = "cnvlib.cli.reference2targets:main"
"skg_convert.py" = "skgenome.cli.skg_convert:main"
# XXX TODO -- figure out whether this script should and could be included
# in the installation
#"snpfilter.sh" = "scripts/snpfilter.sh"

[build-system]
# Minimum requirements for the build system to execute (PEP 508)
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cnvlib", "cnvlib.cli", "cnvlib.segmentation", "skgenome", "skgenome.cli", "skgenome.tabio"]

[tool.setuptools.dynamic]
version = {attr = "cnvlib._version.__version__"}
dependencies = {file = "requirements/core.txt"}
optional-dependencies = {test = {file = "requirements/tests.txt"}}

[tool.pytest.ini_options]
testpaths = ["test"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["cnvlib", "skgenome"]

[tool.coverage.paths]
source = ["cnvlib", "skgenome"]

[tool.mypy]
python_version = "3.10"
files = ["cnvlib", "skgenome"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "matplotlib.*",
    "pandas",
    "pomegranate",
    "pyfaidx",
    "reportlab.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true
